[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "immit"
version = "0.1.0"
description = "Intelligent Morphogenic Materials for Infrastructure Technologies - Advanced Material Science AI Model"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Private"}
authors = [
    {name = "The Greyfield Institute", email = "research@greyfield.institute"},
]
keywords = [
    "materials-science",
    "machine-learning",
    "crystal-structure",
    "property-prediction",
    "infrastructure",
    "construction",
    "smart-materials"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core scientific computing
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    
    # Deep learning
    "torch>=2.1.0",
    "torch-geometric>=2.4.0",
    "lightning>=2.1.0",
    
    # Materials science
    "pymatgen>=2024.1.0",
    "ase>=3.22.0",
    "matminer>=0.9.0",
    
    # Chemistry
    "rdkit>=2023.9.0",
    
    # ML/AI tools
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    
    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    
    # Configuration
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    
    # CLI
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    
    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    
    # Data versioning
    "dvc[s3]>=3.38.0",
    
    # Experiment tracking
    "mlflow>=2.10.0",
    "wandb>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
immit = "immit.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=immit --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true